--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,15 +6,15 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/platform?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     username: root
-    password: shixindonga123
+    password:
     type: com.alibaba.druid.pool.DruidDataSource
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
   servlet:
     multipart:
-      max-file-size: 20MB
-      max-request-size: 20MB
+      max-file-size: 200MB
+      max-request-size: 200MB
   mail:
     host: smtp.qq.com
     port: 465
@@ -51,7 +51,10 @@ code:
   expiration: 600
 
 myconf:
+
   ip: http://localhost
+
+  port: 9090
 
 model:
   port: 8000
