--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     username:
     password:
     properties:
-      mail:
+      mail:git pull
         smtp:
           ssl:
             enable: true
