application.yml更新错误传上去了git pull，修改回来

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     username:
     password:
     properties:
-      mail:git pull
+      mail:
         smtp:
           ssl:
             enable: true
